syntax = "proto3";

package com.intellistart.interviewplanning.request.slot.stream_by_slot_id;

option java_multiple_files = true;

import "com/intellistart/interviewplanning/commonmodels/slot/slot.proto";
import "com/intellistart/interviewplanning/commonmodels/error/error.proto";

message StreamBySlotIdRequest {
  string id = 1;
}

message StreamBySlotIdResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.slot.Slot slot = 1;
  }

  message Failure {
    string message = 1;
  }
}
